feat(poster):add create poster endpoint
