# internal/entity/poster.go
@@ -1,6 +1,10 @@
 package entity
 
-import "github.com/go-park-mail-ru/2026_1_TheBugs/internal/utils/geo"
+import (
+	"mime/multipart"
+
+	"github.com/go-park-mail-ru/2026_1_TheBugs/internal/utils/geo"
+)
 
 type Poster struct {
 	ID      int     `db:"id"`
@@ -54,4 +58,44 @@ type Flat struct {
 	FlatCategory string `db:"flat_category"`
 	Number       int    `db:"number"`
 	Floor        int    `db:"floor"`
+}
+
+type PosterInput struct {
+	UserID int
+
+	Alias       string
+	Price       float64
+	Description string
+
+	CategoryID int
+	Area       float64
+
+	Address        string
+	Geo            geo.GeographyPoint
+	CityID         int
+	MetroStationID *int
+	District       *string
+	FloorCount     int
+
+	CompanyID *int
+
+	Images []PhotoInput
+}
+
+type FlatInput struct {
+	PropertyID int
+	CategoryID int
+	Floor      int
+	Number     int
+}
+
+type PhotoInput struct {
+	FileHeader *multipart.FileHeader
+	Path       string
+	Order      int
+}
+
+type BaseListID struct {
+	PosterID   int
+	PropertyID int
 }
